WP-9042 fixing the alignment of the Alumni utility menu, the drop down for the mobile of the same.

--- a/css/conditionals/blocks/menu-alumni-utility-nav.css
+++ b/css/conditionals/blocks/menu-alumni-utility-nav.css
@@ -8,7 +8,7 @@
     display: none;
   }
 }
-@media (min-width: 60em) and (max-width: 68.75em) and (orientation: landscape) {
+@media (max-width: 74.9375em) {
   #block-menu-menu-alumni-utility-nav {
     right: 140px;
   }
