--- a/css/style.css
+++ b/css/style.css
@@ -9515,6 +9515,12 @@ input.signup-submit:hover {
 }
 
 @media (min-width: 75em) {
+  .page-alumni #header-wrapper.awemenu-sticky ~ #content-wrapper {
+    margin-top: 87px;
+  }
+}
+
+@media (min-width: 75em) {
   div#header-wrapper.awemenu-sticky + div#hero {
     margin-top: 87px;
     position: relative;
@@ -13169,6 +13175,11 @@ button.checkbox-clear-all {
     height: 26px;
   }
 }
+@media (min-width: 68.8125em) and (max-width: 74.9375em) {
+  .page-alumni .banner-title {
+    height: 26px;
+  }
+}
 @media (max-width: 37.4375em) {
   .page-alumni .banner-title {
     height: 42px;
@@ -13590,6 +13601,24 @@ button.checkbox-clear-all {
   #sidebar .block-menu.open .content,
   #sidebar .block-menu-block.open .content {
     top: 42px;
+  }
+}
+@media (min-width: 14.375em) and (max-width: 74.9375em) and (min-width: 14.375em) and (max-width: 74.9375em) {
+  .page-alumni #sidebar .block-menu.open .content > ul.menu, .page-alumni
+  #sidebar .block-menu-block.open .content > ul.menu {
+    margin-top: 9px;
+  }
+}
+@media (min-width: 14.375em) and (max-width: 74.9375em) and (max-width: 37.4375em) {
+  .page-alumni #sidebar .block-menu.open .content > ul.menu, .page-alumni
+  #sidebar .block-menu-block.open .content > ul.menu {
+    margin-top: 9px;
+  }
+}
+@media (min-width: 14.375em) and (max-width: 74.9375em) and (min-width: 23.4375em) and (max-width: 41.6875em) and (orientation: portrait) {
+  .page-alumni #sidebar .block-menu.open .content > ul.menu, .page-alumni
+  #sidebar .block-menu-block.open .content > ul.menu {
+    margin-top: 0;
   }
 }
 @media (min-width: 14.375em) and (max-width: 74.9375em) and (min-width: 37.5em) and (max-width: 74.9375em) {
