--- a/sass/partials/design/_banner.sass
+++ b/sass/partials/design/_banner.sass
@@ -63,6 +63,8 @@
       height: 50px
     +breakpoint($bp-tablet-land)
       height: 26px
+    +breakpoint($bp-tablet-gap)
+      height: 26px
     +breakpoint($bp-for-phone-only)
       height: 42px
     top: 0
@@ -304,6 +306,14 @@
           border-left: 1px solid $grey-dc
           & > li
             padding-left: 30px
+          .page-alumni &
+            +breakpoint($bp-for-phone-tablet-range)
+              margin-top: 9px
+            +breakpoint($bp-for-phone-only)
+              margin-top: 9px
+            +breakpoint($bp-iphone-range-port)
+              margin-top: 0
+
       h2
         color: $grey-hp-7
         .svg &
