--- a/sass/partials/design/_md-megamenu-main.sass
+++ b/sass/partials/design/_md-megamenu-main.sass
@@ -288,6 +288,10 @@ div#header-wrapper.awemenu-sticky + #content-wrapper
   +breakpoint($bp-for-desktop-up)
     margin-top: 87px
     position: relative
+#header-wrapper.awemenu-sticky ~ #content-wrapper
+  .page-alumni &
+    +breakpoint($bp-for-desktop-up)
+      margin-top: 87px
 div#header-wrapper.awemenu-sticky + div#hero
   +breakpoint($bp-for-desktop-up)
     margin-top: 87px
